fixed the gap of the header-content

--- a/css/main.css
+++ b/css/main.css
@@ -94,9 +94,6 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -233,6 +230,11 @@ ul {
             justify-content: space-between;
     width: 100%;
     max-width: 768px;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .nav-mobile {
+    max-width: 1200px;
   }
 }
 .nav-mobile--open {
