--- a/sass/components/_nav-mobile.scss
+++ b/sass/components/_nav-mobile.scss
@@ -4,6 +4,10 @@
     justify-content: space-between;
     width: 100%;
     max-width: 768px;
+
+    @include onDesktop {
+      max-width: 1200px;
+    }
   }
 
   &--open {
