--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -5,7 +5,6 @@
 
   &__content {
     display: none;
-
     flex-direction: column;
 
     @include onTablet {
@@ -14,6 +13,8 @@
       justify-content: space-between;
 
       width: 100%;
+    }
+    @include onDesktop {
     }
   }
 
